[metadata]
name = represent-boundaries
version = 0.9.5
author = Open North Inc.
author_email = represent@opennorth.ca
license = MIT
description = A web API to geographic boundaries loaded from shapefiles, packaged as a Django app.
url = https://opennorth.github.io/represent-boundaries-docs/
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Framework :: Django
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
install_requires =
    django-appconf
include_package_data = True

[options.packages.find]
exclude = boundaries.tests

[options.extras_require]
test =
    testfixtures

[isort]
line_length = 119
profile = black

[flake8]
exclude = boundaries/migrations
extend-ignore =
    # E128 continuation line under-indented for visual indent
    E128,
    # E501 line too long (X > 79 characters)
    E501

[coverage:report]
omit =
  */migrations/*
  */tests/*
